--- a/src/main/webapp/udemy.springProject/WEB-INF/views/book/allBook.html
+++ b/src/main/webapp/udemy.springProject/WEB-INF/views/book/allBook.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,6 +8,11 @@
     <title>Книги</title>
 </head>
 <body>
-<h1>Ты смог</h1>
+<div th:each="book:${books}">
+    <a th:href="@{'/books/' + ${book.getId()} + '/edit'}"
+       th:text="${book.getName()} +', ' + ${book.getAuthor()} + ', ' + ${book.getReleaseYear()}">Book</a>
+</div>
+<br>
+<a href="/books/new">Добавить книгу</a>
 </body>
 </html>
