Start web with person

--- a/src/main/webapp/udemy.springProject/WEB-INF/views/book/new.html
+++ b/src/main/webapp/udemy.springProject/WEB-INF/views/book/new.html
@@ -21,8 +21,7 @@
     <input type="text" th:field="*{releaseYear}" id="releaseYear"/>
     <div style="color:red" th:if="${#fields.hasErrors('releaseYear')}" th:errors="*{releaseYear}">Email Error</div>
     <br/>
-    <br/>
-    <input type="submit" value="Добавить"/>
+    <input type="submit" value="Создать!"/>
 </form>
 </body>
 </html>
