--- a/src/main/webapp/udemy.springProject/WEB-INF/views/book/edit.html
+++ b/src/main/webapp/udemy.springProject/WEB-INF/views/book/edit.html
@@ -10,20 +10,20 @@
 <body>
 
 <form th:method="PATCH" th:action="@{/books/{id}(id=${book.getId()})}" th:object="${book}">
-    <label for="name">Enter name: </label>
+    <label for="name">Введите название книги: </label>
     <input type="text" th:field="*{name}" id="name"/>
     <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
     <br/>
-    <label for="author">Enter author: </label>
+    <label for="author">Введите автора: </label>
     <input type="text" th:field="*{author}" id="author"/>
     <div style="color:red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Author Error</div>
     <br/>
-    <label for="releaseYear">Enter release year: </label>
+    <label for="releaseYear">Введите год: </label>
     <input type="text" th:field="*{releaseYear}" id="releaseYear"/>
     <div style="color:red" th:if="${#fields.hasErrors('releaseYear')}" th:errors="*{releaseYear}">Release Year Error
     </div>
     <br/>
-    <input type="submit" value="Редактировать"/>
+    <input type="submit" value="Редактировать!"/>
 </form>
 
 </body>
