--- a/src/main/webapp/udemy.springProject/WEB-INF/views/person/people.html
+++ b/src/main/webapp/udemy.springProject/WEB-INF/views/person/people.html
@@ -5,15 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Книги</title>
+    <title>Document</title>
 </head>
 <body>
-<div th:each="book:${books}">
-    <a th:href="@{'/books/' + ${book.getId()}}"
-       th:text="${book.getName()} +', ' + ${book.getAuthor()} + ', ' + ${book.getReleaseYear()}">Book</a>
+<div th:each="person:${people}">
+    <a th:href="@{'/people/' + ${person.getId()}}"
+    th:text="${person.getName() + ', ' + person.getBirthdayYear()}"></a>
 </div>
-<br>
-<hr/>
-<a href="/books/new">Добавить книгу</a>
+<hr>
+<a href="/people/new">Добавить человека</a>
 </body>
 </html>
