--- a/src/main/webapp/udemy.springProject/WEB-INF/views/person/new.html
+++ b/src/main/webapp/udemy.springProject/WEB-INF/views/person/new.html
@@ -13,7 +13,7 @@
     <input type="text" th:field="*{name}" id="name"/>
     <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
     <br/>
-    <label for="birthdayYear">Введите год:</label>
+    <label for="birthdayYear">Введите год рождения:</label>
     <input type="text" th:field="*{birthdayYear}" id="birthdayYear"/>
     <div style="color:red" th:if="${#fields.hasErrors('birthdayYear')}"
          th:errors="*{birthdayYear}">birthdayYear Error</div>
