--- a/src/main/webapp/udemy.springProject/WEB-INF/views/person/person.html
+++ b/src/main/webapp/udemy.springProject/WEB-INF/views/person/person.html
@@ -10,10 +10,20 @@
 <body>
 <label th:text="${person.getName()} + ', ' + ${person.getBirthdayYear()}">Person</label>
 <hr>
+<form th:if="${books.size() > 0}">
+    <label><strong>КНИГИ:</strong></label>
+    <div th:each="book:${books}">
+        <a th:href="@{'/books/' + ${book.getId()}}"
+           th:text="${book.getName()} +', ' + ${book.getAuthor()} + ', ' + ${book.getReleaseYear()}">Book</a>
+    </div>
+</form>
+<form th:if="${books.size() == 0}">
+    <label>Человек пока не взял ни одной книги</label>
+</form>
+<hr>
 <form th:method="GET" th:action="@{'/people/' + ${person.getId()} + '/edit'}">
     <input type="submit" value="Редактировать"/>
 </form>
-<br>
 <form th:method="DELETE" th:action="@{'/people/' + ${person.getId()}}">
     <input type="submit" value="Удалить"/>
 </form>
