--- a/src/main/webapp/udemy.springProject/WEB-INF/views/book/edit.html
+++ b/src/main/webapp/udemy.springProject/WEB-INF/views/book/edit.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -25,6 +25,5 @@
     <br/>
     <input type="submit" value="Редактировать!"/>
 </form>
-
 </body>
 </html>
